# yashserver

./: README.md
yashserver_pypiupload/: LICENSE.md  README.md  about.md  pyproject.toml  test.html
yashserver_pypiupload/examples/: task1_browser_server.py  task1_small_server.py  task2_database_support.py  task3_mongodb_compass_test.py
yashserver_pypiupload/src/yashserver/: __init__.py
yashserver_pypiupload/src/yashserver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
yashserver_pypiupload/src/yserver/: __init__.py  database.py  plugin.py  plugins.py  server.py  sync.py  tools.py
yashserver_pypiupload/src/yserver.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
yashserver_pypiupload/tests/: test_database.py  test_http_server.py  test_shutdown.py  test_sync.py  test_tools.py  test_websocket_server.py
yashserver_pypiupload/tls/: cert.pem  key.pem
